<resources>
    <string name="app_name">Sender Remote</string>
    <string name="name">Name</string>
    <string name="group_create_select_senders">Select senders</string>
    <string name="create">Create</string>
    <string name="add_group">Add Group</string>
    <string name="number">Number</string>
    <string name="pin">PIN</string>
    <string name="sender_create_select_groups">Select groups</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="command_on_name">On</string>
    <string name="command_on_description">Turn outputs on</string>
    <string name="command_off_name">Off</string>
    <string name="command_off_description">Turn outputs off</string>
    <string name="command_temp_name">Temperature</string>
    <string name="command_temp_description">Value of temperature sensors</string>
    <string name="command_humid_name">Humidity</string>
    <string name="command_humid_description">Values of humidity sensors</string>
    <string name="command_meas_name">All values</string>
    <string name="command_meas_description">All values of inputs</string>
    <string name="command_limits_name">Limits</string>
    <string name="command_limits_description">Set warning limits on inputs</string>
    <string name="command_status_name">Status</string>
    <string name="command_status_description">Values of all inputs and outputs</string>
    <string name="command_sw_name">Technical Information</string>
    <string name="command_sw_description">Technical Information</string>
    <string name="command_pin_name">Update PIN</string>
    <string name="command_pin_description">Update PIN</string>
    <string name="ok">OK</string>
    <string name="sender_create">Create Sender</string>
    <string name="sender_create_error_name">Name is required</string>
    <string name="sender_create_error_number">Number required</string>
    <string name="sender_create_error_pin_too_short">A PIN is minimum 4 characters</string>
    <string name="sender_Create_error_pin_needed">PIN required</string>
    <string name="group_list_label">Groups</string>
    <string name="group_create_label">Create Group</string>
    <string name="sender_create_label">Create Sender</string>
    <string name="port_naming_label">Name Ports</string>
    <string name="permission_rationale">Sending and receiving SMS are how the application communicates with the senders</string>
    <string name="accept">Accept</string>
    <string name="inputs">Inputs</string>
    <string name="outputs">Outputs</string>
</resources>
