<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_sender_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_sender_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            tools:text="Senders in Stockholm" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_sender_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_sender_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="phone"
            tools:text="00461765896123" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_sender_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_sender_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pin"
            android:inputType="numberSigned|numberDecimal|numberPassword"
            android:maxLength="@integer/pin_max_length"
            tools:text="867441" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_group_selection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sender_create_select_groups"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gl_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2" />

    <Button
        android:id="@+id/bt_create_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />
</LinearLayout>