<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            tools:text="Senders in Stockholm" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_sender_selection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_create_select_senders"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:visibility="gone" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gl_senders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:columnCount="2" />

    <Button
        android:id="@+id/bt_create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />
</LinearLayout>